# memori

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SYNC.md  api-spec.yaml  frontend.md  letter-to-dev.md
.claude/: settings.json
.claude/skills/install/: SKILL.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/chat-identity-fix/: design.md  requirements.md  tasks.md
.kiro/specs/clear-and-refresh-ui/: design.md  requirements.md  tasks.md
.kiro/specs/conversation-history/: design.md  requirements.md  tasks.md
.kiro/specs/fastapi-chat-backend/: design.md  requirements.md  tasks.md
.kiro/specs/frontend-backend-integration/: design.md  requirements.md  tasks.md
.kiro/specs/llm-extractor-contract/: design.md  requirements.md  tasks.md
.kiro/specs/llm-memory-extractor/: design.md  requirements.md  tasks.md
.kiro/specs/memory-feedback-cycle/: design.md  requirements.md  tasks.md
.kiro/specs/memory-informed-chat/: design.md  requirements.md  tasks.md
.kiro/specs/memory-informed-responses/: design.md  requirements.md  tasks.md
.kiro/specs/memory-integration/: design.md  memory_verification_summary.md  requirements.md  tasks.md
.kiro/specs/memory-toggle-control/: design.md  requirements.md  tasks.md
.kiro/specs/memory-tool-calling/: design.md  requirements.md  tasks.md
.kiro/specs/persistent-chat-history/: design.md  requirements.md  tasks.md
.kiro/specs/pycon-demo-typography/: design.md  requirements.md  tasks.md
.kiro/specs/real-time-memory-updates/: design.md  requirements.md  tasks.md
.kiro/specs/reflective-journaling-ui/: design.md  requirements.md  tasks.md
.kiro/specs/reflective-prompt-hardening/: design.md  requirements.md  tasks.md
.kiro/specs/reflective-typing-indicator/: design.md  requirements.md  tasks.md
.kiro/specs/sqlite-database-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: absolute-rules.md  product.md  structure.md  tech.md
backend/: dev.py  main.py  models.py  package.json  requirements.txt  seed_memories.py  view_memories.py
docs/: README-backup.md  architecture-agent.mmd  architecture-engine.mmd  architecture.mmd  frontend.md  install.md  launch-copy.md  packaging_dev.md  pycon-2025.md  spec.md  ui-1.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/services/: chatApi.js  clearApi.js  memoryApi.js
memori/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
memori-core/: Cargo.toml  README.md
memori-core/benches/: crud_bench.rs  embed_bench.rs  memory_bench.rs  search_bench.rs  vector_ops_bench.rs
memori-core/benches/common/: mod.rs
memori-core/src/: embed.rs  lib.rs  schema.rs  search.rs  storage.rs  types.rs  util.rs
memori-core/tests/: integration_test.rs
memori-python/: Cargo.toml  pyproject.toml
memori-python/python/memori/: __init__.py
memori-python/python/memori_cli/: __init__.py
memori-python/python/memori_cli/data/: claude_snippet.md  dashboard.html
memori-python/src/: lib.rs
memori-python/tests/: test_cli.py  test_memori.py
memori/.github/workflows/: ci.yml
memori/app/agent/: README.md
memori/app/ui/: README.md
memori/docs/: blog.md
memori/docs/diagrams/: README.md
memori/examples/: README.md
memori/src/memori/: README.md
memori/src/memori/adapters/: README.md
memori/src/memori/backends/: README.md
memori/src/memori/core/: README.md
memori/tests/: README.md
scripts/: bench-cli.sh  bench-table.py
