[package]
name = "memori-core"
version = "0.1.0"
edition = "2021"
description = "Embedded AI agent memory -- SQLite + vector search + FTS5"
license = "MIT"

[features]
default = ["embeddings"]
embeddings = ["fastembed"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
fastembed = { version = "4", optional = true }
