[package]
name = "memori-ai-py"
version = "0.7.0"
edition = "2021"
description = "PyO3 bindings + CLI for memori-ai-core (published to PyPI as memori-ai)"
license = "MIT"
authors = ["Archit Singh <archit15singh@gmail.com>"]
repository = "https://github.com/archit15singh/memori"
publish = false

[lib]
name = "memori"
crate-type = ["cdylib"]

[features]
default = ["embeddings"]
embeddings = ["memori-ai-core/embeddings"]

[dependencies]
memori-ai-core = { path = "../memori-core" }
pyo3 = { version = "0.22", features = ["abi3-py39"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }