[project]
name = "memori"
version = "0.0.0"
description = "A tiny FOSS memory layer (CRUD + reflection + gap detection). Scaffold only."
authors = [{ name = "Archit Singh", email = "archit@example.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["memory", "reflection", "gap detection", "agents", "FOSS"]

[tool.setuptools.packages.find]
where = ["src"]
